tests/NormalTests/paczka1/fuzzy1/44146982.err
Error in line 1: laHH S501 37,6
Error in line 5: GLzIOE A806 52,9
Error in line 3: laHH S939 8,3
Error in line 27: T9lpmBWfM2 A806 88,0
Error in line 36: A806 A806 79,5
